--- a/biopage.html
+++ b/biopage.html
@@ -10,12 +10,17 @@
 </head>
 <body>
     <ul class="navbar">
-        <li><a href="home.html"></a>Home</li>
-        <li><a href="biopage.html"></a>Bio</li>
-        <li><a href="experience.html"></a>Experience</li>
-        <li><a href="portfolio.html"></a>Portfolio</li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="biopage.html"style="color: brown">Bio</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
     </ul>
-    <h1>Who am I?</h1>
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+    <div class="bioHeader">
+    <h2 id="bioTitle">Who am I?</h2>
+    <p id="bioDescription"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+    <p id="bioDescription"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+    
+
+</div>
 </body>
 </html>
