--- a/experience.html
+++ b/experience.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <ul class="navbar">
-        <li><a href="home.html"></a>Home</li>
-        <li><a href="biopage.html"></a>Bio</li>
-        <li><a href="experience.html"></a>Experience</li>
-        <li><a href="portfolio.html"></a>Portfolio</li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="biopage.html">Bio</a></li>
+        <li><a href="experience.html" style="color:brown">Experience</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
     </ul>
     
 </body>
