--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <ul class="navbar">
-        <li><a href="home.html"></a>Home</li>
-        <li><a href="biopage.html"></a>Bio</li>
-        <li><a href="experience.html"></a>Experience</li>
-        <li><a href="portfolio.html"></a>Portfolio</li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="biopage.html">Bio</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="portfolio.html"style="color: brown">Portfolio</a></li>
     </ul>
 </body>
 </html>
