--- a/portfolio.html
+++ b/portfolio.html
@@ -14,5 +14,7 @@
         <li><a href="experience.html">Experience</a></li>
         <li><a href="portfolio.html"style="color: brown">Portfolio</a></li>
     </ul>
+
+    <p>add animations of scrolling coding rooms and other pics in the photos</p>
 </body>
 </html>
