adding footer across all pages

--- a/biopage.html
+++ b/biopage.html
@@ -9,6 +9,7 @@
 
     </head>
         <body>
+            <p>when images are hoverd over make them bounce forward and be sent ot the rpages e.g expedia homepage</p>
             <ul class="navbar">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="biopage.html"style="color: brown">Bio</a></li>
@@ -34,7 +35,12 @@
                 </div>
             </div>
             <!-- <img id ="raceAcrossTheWorld01" src="https://m.media-amazon.com/images/M/MV5BYzY0ZTVlNDMtNGUwYy00MzRhLWE1N2YtMzJkMTM2YzYxNjk2XkEyXkFqcGdeQXVyMzUyNjQxMw@@._V1_.jpg" alt="" -->
-            
+            <ul class="footer">
+                <li><img id="socialMediaIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
+                <li><img id="socialMediaIcon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
+                <li><img id="socialMediaIcon" src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png"></img></li>
+                <li><img id="socialMediaIcon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li>
+            </ul>
         </body>
 </html>
 
