--- a/experience.html
+++ b/experience.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+    <p>This should highlight your past experience, both professionally and academically.  Include employers/schools as you might on a resume, and list accomplishments at each organization.</p>
     <ul class="navbar">
         <li><a href="home.html">Home</a></li>
         <li><a href="biopage.html">Bio</a></li>
@@ -30,6 +31,12 @@
         <p id="experiencePara">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore tempora repudiandae aut dolor minus at voluptatibus aliquam dicta, hic alias, sunt error expedita, vitae voluptates nobis qui? Animi, in!</p>
     </article>
     <img id ="blackGirlsCodeImg" src="https://lever-client-logos.s3.us-west-2.amazonaws.com/0dd2b62b-4a39-4e5d-bda6-33eb1ce4e8f9-1644250396869.png">
+    <ul class="footer">
+        <li><img id="socialMediaIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
+        <li><img id="socialMediaIcon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
+        <li><img id="socialMediaIcon" src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png"></img></li>
+        <li><img id="socialMediaIcon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li>
+    </ul>
 </body>
 </html>
 
