--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,12 @@
         <li><a href="experience.html">Experience</a></li>
         <li><a href="portfolio.html"style="color: brown">Portfolio</a></li>
     </ul>
-
+    <ul class="footer">
+        <li><img id="socialMediaIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
+        <li><img id="socialMediaIcon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
+        <li><img id="socialMediaIcon" src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png"></img></li>
+        <li><img id="socialMediaIcon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li>
+    </ul>
     <p>add animations of scrolling coding rooms and other pics in the photos</p>
 </body>
 </html>
