amending media queries

--- a/biopage.html
+++ b/biopage.html
@@ -9,32 +9,32 @@
 
     </head>
         <body>
-            <p>when images are hoverd over make them bounce forward and be sent ot the rpages e.g expedia homepage</p>
             <ul class="navbar">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="biopage.html"style="color: brown">Bio</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
-            <images class="topImages">
-                <img id ="raceAcrossTheWorld02" src="https://m.media-amazon.com/images/I/81zrdMNT7hL._RI_.jpg">
-                <img id ="cheesecake" src="https://images.immediate.co.uk/production/volatile/sites/30/2022/10/No-bake-raspberry-cheesecake-cc1ee62.jpg">
-            </images>
+            <main>
+                <images class="bioTopImages">
+                    <img id ="raceAcrossTheWorld02" src="https://m.media-amazon.com/images/I/81zrdMNT7hL._RI_.jpg">
+                    <img id ="cheesecake" src="https://images.immediate.co.uk/production/volatile/sites/30/2022/10/No-bake-raspberry-cheesecake-cc1ee62.jpg">
+                </images>
                 <img id ="beachHoliday" src="https://media.nationalgeographic.org/assets/photos/000/267/26734_c25-0-964-743_r800x633.jpg?c816ed0308ccc31a13f7c2113c697f9bd40ae230">
                 <img id ="expedia" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Expedia_Icon_2022.svg/768px-Expedia_Icon_2022.svg.png">
                 <img id ="DIY" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/aspyn-ovard-house-makeover-vintage-revivals-32-1531493149.jpg">
-           
-            <div class="bioBody">
-                <h2 id="bioTitle">Who am I?</h2>
-                <div class="bioList">
-                    <p id="bioDescription"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
-                    <p id="bioDescription"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
-                    <p id="bioDescription"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
-                    <p id="bioDescription"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
-                    <p id="bioDescription"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+            
+                <div class="bioBody">
+                    <h2 id="bioTitle">Who am I?</h2>
+                    <div class="bioList">
+                        <p id="bioDescription"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+                        <p id="bioDescription"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+                        <p id="bioDescription"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+                        <p id="bioDescription"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+                        <p id="bioDescription"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+                    </div>
                 </div>
-            </div>
-            <!-- <img id ="raceAcrossTheWorld01" src="https://m.media-amazon.com/images/M/MV5BYzY0ZTVlNDMtNGUwYy00MzRhLWE1N2YtMzJkMTM2YzYxNjk2XkEyXkFqcGdeQXVyMzUyNjQxMw@@._V1_.jpg" alt="" -->
+            </main>
             <ul class="footer">
                 <li><img id="socialMediaIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
                 <li><img id="socialMediaIcon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
