--- a/experience.html
+++ b/experience.html
@@ -16,21 +16,23 @@
         <li><a href="experience.html" style="color:brown">Experience</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
     </ul>
-    <titles class="experienceTitles">
-        <h2>Expertise</h2>
-        <h2>Background</h2>
-    </titles>
-    <article class="experienceBody">
-        <ul>
-            <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
-            <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
-            <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
-            <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
-            <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
-        </ul>
-        <p id="experiencePara">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore tempora repudiandae aut dolor minus at voluptatibus aliquam dicta, hic alias, sunt error expedita, vitae voluptates nobis qui? Animi, in!</p>
-    </article>
-    <img id ="blackGirlsCodeImg" src="https://lever-client-logos.s3.us-west-2.amazonaws.com/0dd2b62b-4a39-4e5d-bda6-33eb1ce4e8f9-1644250396869.png">
+    <main>
+        <titles class="experienceTitles">
+            <h2>Expertise</h2>
+            <h2>Background</h2>
+        </titles>
+        <article class="experienceBody">
+            <ul>
+                <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
+                <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
+                <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
+                <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
+                <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
+            </ul>
+            <p id="experiencePara">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore tempora repudiandae aut dolor minus at voluptatibus aliquam dicta, hic alias, sunt error expedita, vitae voluptates nobis qui? Animi, in!</p>
+        </article>
+        <img id ="blackGirlsCodeImg" src="https://lever-client-logos.s3.us-west-2.amazonaws.com/0dd2b62b-4a39-4e5d-bda6-33eb1ce4e8f9-1644250396869.png">
+    </main>
     <ul class="footer">
         <li><img id="socialMediaIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
         <li><img id="socialMediaIcon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
