--- a/portfolio.html
+++ b/portfolio.html
@@ -14,12 +14,20 @@
         <li><a href="experience.html">Experience</a></li>
         <li><a href="portfolio.html"style="color: brown">Portfolio</a></li>
     </ul>
+    <main class="portfolioMain">
+        <images class="portfolioImages">
+            <img id="sneakerHead" src="images/sneakerHead.jpeg" alt="A site I built using html and CSS - its a page about sneakers">
+            <p id="portfolioImagesText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, ipsam iusto explicabo mollitia dolor officia, magnam aperiam autem accusantium eligendi laudantium soluta neque sed itaque porro assumenda doloribus ratione voluptates!</p>
+            <img id="travelBlog" src="images/travelBlog.jpeg" alt="A site I built using html and CSS - it's a page about travelling to paris. ">
+            <p id="portfolioImagesText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, ipsam iusto explicabo mollitia dolor officia, magnam aperiam autem accusantium eligendi laudantium soluta neque sed itaque porro assumenda doloribus ratione voluptates!</p>
+
+        </images>
+    </main>
     <ul class="footer">
         <li><img id="socialMediaIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
         <li><img id="socialMediaIcon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
         <li><img id="socialMediaIcon" src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png"></img></li>
         <li><img id="socialMediaIcon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li>
     </ul>
-    <p>add animations of scrolling coding rooms and other pics in the photos</p>
 </body>
 </html>
