corecting css naming

--- a/home.html
+++ b/home.html
@@ -19,13 +19,13 @@
         <h3 id="portfolioHeader">Get to know me</h3>
         <h1 id="myName">Litany Kato</h1>
         <img id ="livingroom" src="https://cdn.shopify.com/s/files/1/0006/6558/3668/articles/12.02_boho_living_room_decor_hero_720x.jpg?v=1622687502" alt="boho chic living room with plants, white walls and sofa and black and white rugs and blankets lounged everywhere"/>
-        <img id ="blackGirlsCodeImg" src="https://lever-client-logos.s3.us-west-2.amazonaws.com/0dd2b62b-4a39-4e5d-bda6-33eb1ce4e8f9-1644250396869.png">
+       
     </main>
-    <ul class="footer">
+    <!-- <ul class="footer">
         <li><img id="socialMediaIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
         <li><img id="socialMediaIcon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
         <li><img id="socialMediaIcon" src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png"></img></li>
         <li><img id="socialMediaIcon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li>
-    </ul>
+    </ul> -->
 </body>
 </html>
