--- a/experience.html
+++ b/experience.html
@@ -9,36 +9,37 @@
 
 </head>
 <body>
-    <p>This should highlight your past experience, both professionally and academically.  Include employers/schools as you might on a resume, and list accomplishments at each organization.</p>
-    <ul class="navbar">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="biopage.html">Bio</a></li>
-        <li><a href="experience.html" style="color:brown">Experience</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-    </ul>
-    <main>
-        <titles class="experienceTitles">
-            <h2>Expertise</h2>
-            <h2>Background</h2>
-        </titles>
-        <article class="experienceBody">
-            <ul>
-                <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
-                <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
-                <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
-                <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
-                <li id="experienceDescrip">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
-            </ul>
-            <p id="experiencePara">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore tempora repudiandae aut dolor minus at voluptatibus aliquam dicta, hic alias, sunt error expedita, vitae voluptates nobis qui? Animi, in!</p>
-        </article>
-        <img id ="blackGirlsCodeImg" src="https://lever-client-logos.s3.us-west-2.amazonaws.com/0dd2b62b-4a39-4e5d-bda6-33eb1ce4e8f9-1644250396869.png">
-    </main>
-    <ul class="footer">
-        <li><img id="socialMediaIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
-        <li><img id="socialMediaIcon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
-        <li><img id="socialMediaIcon" src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png"></img></li>
-        <li><img id="socialMediaIcon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li>
-    </ul>
+    <container class="container">
+        <ul class="navbar">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="biopage.html">Bio</a></li>
+            <li><a href="experience.html" style="color:brown">Experience</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+        </ul>
+        <main class="main">
+            <section>
+                <h2> Background</h2>
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore tempora repudiandae aut dolor minus at voluptatibus aliquam dicta, hic alias, sunt error expedita, vitae voluptates nobis qui? Animi, in!</p>
+            </section>
+            <section>
+                <h2>Expertise</h2>
+                <ul>
+                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
+                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
+                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
+                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
+                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
+                </ul>
+            </section>
+            <img id="black-girls-code-img" src="https://lever-client-logos.s3.us-west-2.amazonaws.com/0dd2b62b-4a39-4e5d-bda6-33eb1ce4e8f9-1644250396869.png">
+        </main>
+        <ul class="footer">
+            <li><img class="social-media-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
+            <li><img class="social-media-icon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
+            <li><img class="social-media-icon" src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png"></img></li>
+            <li><img class="social-media-icon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li>
+        </ul>
+    </container>
 </body>
 </html>
 
