--- a/experience.html
+++ b/experience.html
@@ -9,11 +9,11 @@
 
 </head>
 <body>
-    <container class="container">
+    <div class="container">
         <ul class="navbar">
             <li><a href="home.html">Home</a></li>
             <li><a href="biopage.html">Bio</a></li>
-            <li><a href="experience.html" style="color:brown">Experience</a></li>
+            <li><a href="experience.html" id="active-page">Experience</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
         <main class="main">
@@ -39,7 +39,7 @@
             <li><img class="social-media-icon" src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png"></img></li>
             <li><img class="social-media-icon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li>
         </ul>
-    </container>
+    </div>
 </body>
 </html>
 
