--- a/portfolio.html
+++ b/portfolio.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Porfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <container class="container">
-        <ul class="navbar">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="biopage.html">Bio</a></li>
-            <li><a href="experience.html">Experience</a></li>
-            <li><a href="portfolio.html"style="color: brown">Portfolio</a></li>
-        </ul>
-        <main class="main">
-            <img class="portfolio-img" src="images/sneakerHead.jpeg" alt="A site I built using html and CSS - its a page about sneakers">
-            <p class="portfolio-images-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, ipsam iusto explicabo mollitia dolor officia, magnam aperiam autem accusantium eligendi laudantium soluta neque sed itaque porro assumenda doloribus ratione voluptates!</p>
-            <img class="portfolio-img" src="images/travelBlog.jpeg" alt="A site I built using html and CSS - it's a page about travelling to paris. ">
-            <p class="portfolio-images-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, ipsam iusto explicabo mollitia dolor officia, magnam aperiam autem accusantium eligendi laudantium soluta neque sed itaque porro assumenda doloribus ratione voluptates!</p>
-        </main>
-        <ul class="footer">
-            <li><img class="social-media-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
-            <li><img class="social-media-icon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
-            <li><img class="social-media-icon" src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png"></img></li>
-            <li><img class="social-media-icon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li>
-        </ul>
-    </container>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Porfolio</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="container">
+            <ul class="navbar">
+                <li><a href="home.html">Home</a></li>
+                <li><a href="biopage.html">Bio</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="portfolio.html" id="active-page">Portfolio</a></li>
+            </ul>
+            <main class="main">
+                <img class="portfolio-img" src="images/sneakerHead.jpeg" alt="A site I built using html and CSS - its a page about sneakers">
+                <p class="portfolio-images-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, ipsam iusto explicabo mollitia dolor officia, magnam aperiam autem accusantium eligendi laudantium soluta neque sed itaque porro assumenda doloribus ratione voluptates!</p>
+                <img class="portfolio-img" src="images/travelBlog.jpeg" alt="A site I built using html and CSS - it's a page about travelling to paris. ">
+                <p class="portfolio-images-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, ipsam iusto explicabo mollitia dolor officia, magnam aperiam autem accusantium eligendi laudantium soluta neque sed itaque porro assumenda doloribus ratione voluptates!</p>
+            </main>
+            <ul class="footer">
+                <li><img class="social-media-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
+                <li><img class="social-media-icon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
+                <li><img class="social-media-icon" src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png"></img></li>
+                <li><img class="social-media-icon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li>
+            </ul>
+        </div>
+    </body>
 </html>
