--- a/biopage.html
+++ b/biopage.html
@@ -5,15 +5,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bio</title>
+        <!-- footer icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="style.css">
 
     </head>
         <body>
-            <container class="container">
+            <div class="container">
                 <nav>
                     <ul class="navbar">
                         <li><a href="home.html">Home</a></li>
-                        <li><a href="biopage.html"style="color: brown">Bio</a></li>
+                        <li><a href="biopage.html" id="active-page">Bio</a></li>
                         <li><a href="experience.html">Experience</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
@@ -23,30 +25,38 @@
                         <img id ="race-across-the-world-img" src="https://m.media-amazon.com/images/I/81zrdMNT7hL._RI_.jpg">
                         <img id ="cheesecake-img" src="https://images.immediate.co.uk/production/volatile/sites/30/2022/10/No-bake-raspberry-cheesecake-cc1ee62.jpg">
                     </div>
-                    <img id ="beach-holiday-img" src="https://media.nationalgeographic.org/assets/photos/000/267/26734_c25-0-964-743_r800x633.jpg?c816ed0308ccc31a13f7c2113c697f9bd40ae230">
-                    <img id ="expedia-logo-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Expedia_Icon_2022.svg/768px-Expedia_Icon_2022.svg.png">
-                    <img id ="diy-img" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/aspyn-ovard-house-makeover-vintage-revivals-32-1531493149.jpg">
-                
-                    <div class="bio-body">
-                        <h2 id="bio-title">Who am I?</h2>
-                        <div class="bio-list">
-                            <p id="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
-                            <p id="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
-                            <p id="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
-                            <p id="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
-                            <p id="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
-                        </div>
+                    <div class="bio-header-images">
+                        <img id ="beach-holiday-img" src="https://media.nationalgeographic.org/assets/photos/000/267/26734_c25-0-964-743_r800x633.jpg?c816ed0308ccc31a13f7c2113c697f9bd40ae230">
+                        <img id ="expedia-logo-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Expedia_Icon_2022.svg/768px-Expedia_Icon_2022.svg.png">
+                        <img id ="diy-img" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/aspyn-ovard-house-makeover-vintage-revivals-32-1531493149.jpg">
                     </div>
+                    <section class="bio-content">
+                        <h2>Who am I?</h2>
+                        <p class="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+                        <p class="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+                        <p class="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+                        <p class="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+                        <p class="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+                    </section>
                 </main>
                 <footer>
                     <ul class="footer">
-                        <li><img class="social-media-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
+                        <li class="fa social-media-icon fa-instagram"></li>
+                        <li class="fa social-media-icon fa-instagram"></li>
+                        <li class="fa social-media-icon fa-instagram"></li>
+                        <li class="fa social-media-icon fa-instagram"></li>
+
+                        <!-- <li class="fa fa-instagram"></li>
+                        <li class="fa fa-instagram"></li>
+                        <li class="fa fa-instagram"></li> -->
+
+                        <!-- <li><img class="social-media-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
                         <li><img class="social-media-icon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
                         <li><img class="social-media-icon" src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png"></img></li>
-                        <li><img class="social-media-icon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li>
+                        <li><img class="social-media-icon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li> -->
                     </ul>
                 </footer>
-            </container>
+            </div>
         </body>
 </html>
 
