--- a/home.html
+++ b/home.html
@@ -9,23 +9,20 @@
 
 </head>
 <body>
-    <ul class="navbar">
-        <li><a href="home.html" style="color: brown;">Home</a></li>
-        <li><a href="biopage.html">Bio</a></li>
-        <li><a href="experience.html">Experience</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-    </ul>
-    <main class="home">
-        <h3 id="portfolioHeader">Get to know me</h3>
-        <h1 id="myName">Litany Kato</h1>
-        <img id ="livingroom" src="https://cdn.shopify.com/s/files/1/0006/6558/3668/articles/12.02_boho_living_room_decor_hero_720x.jpg?v=1622687502" alt="boho chic living room with plants, white walls and sofa and black and white rugs and blankets lounged everywhere"/>
-       
+
+    <nav>
+        <ul class="navbar">
+            <li><a href="home.html" id="active-page">Home</a></li>
+            <li><a href="biopage.html">Bio</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+        </ul>
+    </nav>
+    <main class="main">
+        <h2 id="main-title">Get to know me</h2>
+        <h1 id="my-name">Litany Kato</h1>
+        <img id ="livingroom-img" src="https://cdn.shopify.com/s/files/1/0006/6558/3668/articles/12.02_boho_living_room_decor_hero_720x.jpg?v=1622687502" alt="boho chic living room with plants, white walls and sofa and black and white rugs and blankets lounged everywhere"/>
     </main>
-    <!-- <ul class="footer">
-        <li><img id="socialMediaIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
-        <li><img id="socialMediaIcon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
-        <li><img id="socialMediaIcon" src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png"></img></li>
-        <li><img id="socialMediaIcon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li>
-    </ul> -->
+
 </body>
 </html>
