--- a/experience.html
+++ b/experience.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <ul class="navbar">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="biopage.html">Bio</a></li>
             <li><a href="experience.html" id="active-page">Experience</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
@@ -34,10 +34,10 @@
             <img id="black-girls-code-img" src="https://lever-client-logos.s3.us-west-2.amazonaws.com/0dd2b62b-4a39-4e5d-bda6-33eb1ce4e8f9-1644250396869.png">
         </main>
         <ul class="footer">
-            <li><img class="social-media-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
-            <li><img class="social-media-icon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
-            <li><img class="social-media-icon" src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png"></img></li>
-            <li><img class="social-media-icon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li>
+            <li class="fa social-media-icon fa-instagram"></li>
+            <li class="fa social-media-icon fa-youtube"></li>
+            <li class="fa social-media-icon fa-linkedin"></li>
+            <li class="fa social-media-icon fa-phone"></li>
         </ul>
     </div>
 </body>
