--- a/biopage.html
+++ b/biopage.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <nav>
                     <ul class="navbar">
-                        <li><a href="home.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="biopage.html" id="active-page">Bio</a></li>
                         <li><a href="experience.html">Experience</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
@@ -44,18 +44,9 @@
                 <footer>
                     <ul class="footer">
                         <li class="fa social-media-icon fa-instagram"></li>
-                        <li class="fa social-media-icon fa-instagram"></li>
-                        <li class="fa social-media-icon fa-instagram"></li>
-                        <li class="fa social-media-icon fa-instagram"></li>
-
-                        <!-- <li class="fa fa-instagram"></li>
-                        <li class="fa fa-instagram"></li>
-                        <li class="fa fa-instagram"></li> -->
-
-                        <!-- <li><img class="social-media-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"></img></li>
-                        <li><img class="social-media-icon" src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png"></img></li>
-                        <li><img class="social-media-icon" src="https://assets.stickpng.com/images/584856b4e0bb315b0f7675ac.png"></img></li>
-                        <li><img class="social-media-icon" src="https://cdn0.iconfinder.com/data/icons/basic-uses-symbol-vol-1/100/Call_Phone_Cell_Ring_Pick_up-512.png"></img></li> -->
+                        <li class="fa social-media-icon fa-youtube"></li>
+                        <li class="fa social-media-icon fa-linkedin"></li>
+                        <li class="fa social-media-icon fa-phone"></li>
                     </ul>
                 </footer>
             </div>
