--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Litany Manual </title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
-
 
 </head>
 <body>
+    <div class="container">
+        <nav>
+            <ul class="navbar">
+                <li><a href="index.html" id="active-page">Home</a></li>
+                <li><a href="biopage.html">Bio</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+            </ul>
+        </nav>
+        <main class="main">
+            <h2 id="main-title">Get to know me</h2>
+            <h1 id="my-name">Litany Kato</h1>
+            <!-- <img id="wavy-background" src="https://static.vecteezy.com/system/resources/previews/003/988/578/original/psychedelic-groovy-retro-background-vector.jpg" -->
+            <!-- <img id ="livingroom-img" src="https://cdn.shopify.com/s/files/1/0006/6558/3668/articles/12.02_boho_living_room_decor_hero_720x.jpg?v=1622687502" alt="boho chic living room with plants, white walls and sofa and black and white rugs and blankets lounged everywhere"/> -->
+        </main>
+    </div>
 </body>
 </html>
