home page update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="container">
+    <div class="index-container">
         <nav>
             <ul class="navbar">
                 <li><a href="index.html" id="active-page">Home</a></li>
@@ -21,8 +21,6 @@
         <main class="main">
             <h2 id="main-title">Get to know me</h2>
             <h1 id="my-name">Litany Kato</h1>
-            <!-- <img id="wavy-background" src="https://static.vecteezy.com/system/resources/previews/003/988/578/original/psychedelic-groovy-retro-background-vector.jpg" -->
-            <!-- <img id ="livingroom-img" src="https://cdn.shopify.com/s/files/1/0006/6558/3668/articles/12.02_boho_living_room_decor_hero_720x.jpg?v=1622687502" alt="boho chic living room with plants, white walls and sofa and black and white rugs and blankets lounged everywhere"/> -->
         </main>
     </div>
 </body>
