adding links to images in bio

--- a/experience.html
+++ b/experience.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experience</title>
+    <!-- footer icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -33,12 +35,14 @@
             </section>
             <img id="black-girls-code-img" src="https://lever-client-logos.s3.us-west-2.amazonaws.com/0dd2b62b-4a39-4e5d-bda6-33eb1ce4e8f9-1644250396869.png">
         </main>
-        <ul class="footer">
-            <li class="fa social-media-icon fa-instagram"></li>
-            <li class="fa social-media-icon fa-youtube"></li>
-            <li class="fa social-media-icon fa-linkedin"></li>
-            <li class="fa social-media-icon fa-phone"></li>
-        </ul>
+        <footer>
+            <ul class="footer">
+                <li class="fa social-media-icon fa-instagram"></li>
+                <li class="fa social-media-icon fa-youtube"></li>
+                <li class="fa social-media-icon fa-linkedin"></li>
+                <li class="fa social-media-icon fa-phone"></li>
+            </ul>
+        </footer>
     </div>
 </body>
 </html>
