--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Porfolio</title>
+        <!-- footer icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -21,12 +23,14 @@
                 <img class="portfolio-img" src="images/travelBlog.jpeg" alt="A site I built using html and CSS - it's a page about travelling to paris. ">
                 <p class="portfolio-images-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, ipsam iusto explicabo mollitia dolor officia, magnam aperiam autem accusantium eligendi laudantium soluta neque sed itaque porro assumenda doloribus ratione voluptates!</p>
             </main>
-            <ul class="footer">
-                <li class="fa social-media-icon fa-instagram"></li>
-                <li class="fa social-media-icon fa-youtube"></li>
-                <li class="fa social-media-icon fa-linkedin"></li>
-                <li class="fa social-media-icon fa-phone"></li>
-            </ul>
+            <footer>
+                <ul class="footer">
+                    <li class="fa social-media-icon fa-instagram"></li>
+                    <li class="fa social-media-icon fa-youtube"></li>
+                    <li class="fa social-media-icon fa-linkedin"></li>
+                    <li class="fa social-media-icon fa-phone"></li>
+                </ul>
+            </footer>
         </div>
     </body>
 </html>
