media query updates

--- a/experience.html
+++ b/experience.html
@@ -18,14 +18,14 @@
             <li><a href="experience.html" id="active-page">Experience</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
-        <main class="main">
+        <main class="main experience-main">
             <section>
-                <h2> Background</h2>
+                <h2 class="experience-titles"> Background</h2>
                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat inventore tempora repudiandae aut dolor minus at voluptatibus aliquam dicta, hic alias, sunt error expedita, vitae voluptates nobis qui? Animi, in!</p>
             </section>
             <section>
-                <h2>Expertise</h2>
-                <ul>
+                <h2 class="experience-titles">Expertise</h2>
+                <ul class="expertise-list">
                     <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
                     <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
                     <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, iure minima assumenda</li>
@@ -34,7 +34,8 @@
                 </ul>
             </section>
             <img id="black-girls-code-img" src="https://lever-client-logos.s3.us-west-2.amazonaws.com/0dd2b62b-4a39-4e5d-bda6-33eb1ce4e8f9-1644250396869.png">
-        </main>
+            </main>
+            <div id="black-girls-code-background-img"></div>
         <footer>
             <ul class="footer">
                 <li class="fa social-media-icon fa-instagram"></li>
