--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="index-container">
+    <div class="home-container">
         <nav>
             <ul class="navbar">
                 <li><a href="index.html" id="active-page">Home</a></li>
@@ -18,9 +18,11 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
-        <main class="main">
-            <h2 id="main-title">Get to know me</h2>
-            <h1 id="my-name">Litany Kato</h1>
+        <main class="home-main">
+
+                    <h2 id="main-title">Get to know me</h2>
+                    <h1 id="my-name">Litany Kato</h1>
+                
         </main>
     </div>
 </body>
