--- a/biopage.html
+++ b/biopage.html
@@ -21,32 +21,32 @@
                     </ul>
                 </nav>
                 <main class="main">
-                    <div class="bio-header-images">
-                        <a id ="race-across-the-world-link" href="https://www.bbc.co.uk/programmes/m0002tvs/episodes/player" target="_blank">
-                            <img id ="race-across-the-world-img"src="https://m.media-amazon.com/images/I/81zrdMNT7hL._RI_.jpg">
-                        </a>
-                        <a id ="cheesecake-link" href="https://www.bbcgoodfood.com/recipes/collection/cheesecake-recipes" target="blank">
-                            <img id ="cheesecake-img" src="https://images.immediate.co.uk/production/volatile/sites/30/2022/10/No-bake-raspberry-cheesecake-cc1ee62.jpg">
-                        </a>
-                    </div>
-                    <div class="bio-header-images">
-                        <a id="beach-holiday-link" src="https://www.cntraveller.com/gallery/best-beaches-in-the-world">
-                            <img id ="beach-holiday-img" src="https://media.nationalgeographic.org/assets/photos/000/267/26734_c25-0-964-743_r800x633.jpg?c816ed0308ccc31a13f7c2113c697f9bd40ae230">
-                        </a>
-                        <a id ="expedia-logo-link" src="https://www.expedia.co.uk/?locale=en_GB&siteid=3&semcid=UK.B.GOOGLE.BT-c-EN.GT&SEMDTL=a118255096848.b1145235704281.g1kwd-12670071.l1.e1c.m1CjwKCAiAuOieBhAIEiwAgjCvctcBr9RpQ8Z2kAw_6BEzZkUes3_b99zUVMOrJ2xPmWvAQghmUyA8XxoCK3YQAvD_BwE.r1ef078e7a72cbb5fe17e39cb52faa016a45580aaab003c9832f7cbf22e8c100fc.c13qaTBEnf_If-PREmGqyIFA.j19045901.k1.d1624813131661.h1e.i1.n1.o1.p1.q1.s1.t1.x1.f1.u1.v1.w1&gclid=CjwKCAiAuOieBhAIEiwAgjCvctcBr9RpQ8Z2kAw_6BEzZkUes3_b99zUVMOrJ2xPmWvAQghmUyA8XxoCK3YQAvD_BwE" target="blank">
-                            <img id ="expedia-logo-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Expedia_Icon_2022.svg/768px-Expedia_Icon_2022.svg.png">
-                        </a>
-                        <a id ="diy-link" src="https://www.youtube.com/@AlexandraGater" target="blank">
-                            <img id ="diy-img" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/aspyn-ovard-house-makeover-vintage-revivals-32-1531493149.jpg">
-                        </a>
-                    </div>
+                    <figure>
+                        <div class="bio-header-images">
+                            <a id ="race-across-the-world-link" href="https://www.bbc.co.uk/programmes/m0002tvs/episodes/player" target="_blank">
+                                <img id ="race-across-the-world-img"src="https://m.media-amazon.com/images/I/81zrdMNT7hL._RI_.jpg">
+                            </a>
+                            <a id ="cheesecake-link" href="https://www.bbcgoodfood.com/recipes/collection/cheesecake-recipes" target="blank">
+                                <img id ="cheesecake-img" src="https://images.immediate.co.uk/production/volatile/sites/30/2022/10/No-bake-raspberry-cheesecake-cc1ee62.jpg">
+                            </a>
+                        </div>
+                        <div class="bio-header-images">
+                            <a id="beach-holiday-link" href="https://www.cntraveller.com/gallery/best-beaches-in-the-world">
+                                <img id ="beach-holiday-img" src="https://media.nationalgeographic.org/assets/photos/000/267/26734_c25-0-964-743_r800x633.jpg?c816ed0308ccc31a13f7c2113c697f9bd40ae230">
+                            </a>
+                            <a id ="expedia-logo-link" href="https://www.expedia.co.uk/?locale=en_GB&siteid=3&semcid=UK.B.GOOGLE.BT-c-EN.GT&SEMDTL=a118255096848.b1145235704281.g1kwd-12670071.l1.e1c.m1CjwKCAiAuOieBhAIEiwAgjCvctcBr9RpQ8Z2kAw_6BEzZkUes3_b99zUVMOrJ2xPmWvAQghmUyA8XxoCK3YQAvD_BwE.r1ef078e7a72cbb5fe17e39cb52faa016a45580aaab003c9832f7cbf22e8c100fc.c13qaTBEnf_If-PREmGqyIFA.j19045901.k1.d1624813131661.h1e.i1.n1.o1.p1.q1.s1.t1.x1.f1.u1.v1.w1&gclid=CjwKCAiAuOieBhAIEiwAgjCvctcBr9RpQ8Z2kAw_6BEzZkUes3_b99zUVMOrJ2xPmWvAQghmUyA8XxoCK3YQAvD_BwE" target="blank">
+                                <img id ="expedia-logo-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Expedia_Icon_2022.svg/768px-Expedia_Icon_2022.svg.png">
+                            </a>
+                            <a id ="diy-link" href="https://www.youtube.com/@AlexandraGater" target="blank">
+                                <img id ="diy-img" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/aspyn-ovard-house-makeover-vintage-revivals-32-1531493149.jpg">
+                            </a>
+                        </div>
+                    </figure>
                     <section class="bio-content">
                         <h2>Who am I?</h2>
                         <p class="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
                         <p class="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
-                        <p class="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
-                        <p class="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
-                        <p class="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>
+                        <p class="bio-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero quis minima! A libero placeat laudantium. Aut suscipit alias voluptatibus fugit cum praesentium quo dignissimos natus iure, unde, mollitia optio?</p>                     
                     </section>
                 </main>
                 <footer>
