--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                     <img class="portfolio-img" src="images/sneakerHead.jpeg" alt="A site I built using html and CSS - its a page about sneakers">
                     <p class="portfolio-images-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, ipsam iusto explicabo mollitia dolor officia, magnam aperiam autem accusantium eligendi laudantium soluta neque sed itaque porro assumenda doloribus ratione voluptates!</p>
                 </div>
-                <div class="porfolio-img-1024px">
+                <div class="porfolio-img-1024px porfolio-img-768px">
                     <img class="portfolio-img" src="images/travelBlog.jpeg" alt="A site I built using html and CSS - it's a page about travelling to paris. ">
                     <p class="portfolio-images-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, ipsam iusto explicabo mollitia dolor officia, magnam aperiam autem accusantium eligendi laudantium soluta neque sed itaque porro assumenda doloribus ratione voluptates!</p>
                 </div>
